<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarcaFormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adicionar Marca"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/tvId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Id visible cuando se modifica"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/etNombre"
            android:inputType="textPersonName"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:hint="@string/etDescripcion"
            android:inputType="textMultiLine"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnAddMarca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAdicionar" />
            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnCancelarMar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancelar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>